# Raytracer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  Task_template.md  test_format.cpp
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature_request.md  feature_request.yml  improvement.yml  initial_setup.md  project_issue_template.md  setup_tdd.md  task.yml
.github/workflows/: raytracer_ci.yml
cmake/: FetchGoogleTest.cmake
docs/: COMMIT_CONVENTION.md  FEATURES.md  ISSUE_TEMPLATE_USAGE.md  faq.dox  features.md  mainpage.dox  scene_format.md  user_guide.dox
include/: ILight.hpp  IPrimitive.hpp
include/exceptions/: InvalidTypeException.hpp  ParserException.hpp  RaytracerException.hpp
plugins/lights/sample_point/: CMakeLists.txt
plugins/primitives/sample_sphere/: CMakeLists.txt
scenes/: checkerboard_test.cfg  checkerboard_test.ppm  demo_checkerboard_shadow.cfg  demo_checkerboard_shadow.ppm  demo_chessboard.cfg  demo_cone.cfg  demo_cone.ppm  demo_infinite_cylinder.cfg  demo_infinite_cylinder.ppm  demo_limited_cone.cfg  demo_limited_cone.ppm  demo_limited_cylinder.cfg  demo_limited_cylinder.ppm  demo_sphere.cfg  demo_sphere.ppm  demo_torus.cfg  demo_torus.ppm  demo_triangle.cfg  demo_triangle.ppm  full_demo_scene.cfg  full_demo_scene_test.ppm  phong_lighting_test.cfg  phong_lighting_test.ppm  phong_point_lighting_night_shade.cfg  phong_point_lighting_night_shade.ppm  phong_point_lighting_test.cfg  phong_point_lighting_test.ppm  showcase_scene.cfg  simple_demo_sphere.cfg  simple_demo_sphere.ppm  test_multiple_spheres.cfg  test_multiple_spheres.ppm  triangle_test.cfg
src/: CMakeLists.txt  main.cpp
src/core/: Color.cpp  Color.hpp  Matrix.cpp  Matrix.hpp  Ray.cpp  Ray.hpp  RenderTile.cpp  RenderTile.hpp  ThreadPool.cpp  ThreadPool.hpp  Transform.cpp  Transform.hpp  Vector3D.cpp  Vector3D.hpp
src/display/: PPMDisplay.cpp  PPMDisplay.hpp  SFMLDisplay.cpp  SFMLDisplay.hpp
src/exceptions/: RaytracerException.cpp
src/scene/: Camera.cpp  Camera.hpp  Resolution.cpp  Resolution.hpp  Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/scene/lights/: AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  LightFactory.cpp  LightFactory.hpp  LightingSettings.hpp  PointLight.cpp  PointLight.hpp
src/scene/parser/: SceneParser.cpp  SceneParser.hpp  SceneParserAliases.cpp
src/scene/primitives/: CheckerboardPlane.cpp  CheckerboardPlane.hpp  ChessboardPlane.cpp  ChessboardPlane.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  ICone.hpp  ICylinder.hpp  LimitedCone.cpp  LimitedCone.hpp  LimitedCylinder.cpp  LimitedCylinder.hpp  Plane.cpp  Plane.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp  Triangle.cpp  Triangle.hpp
tests/: CMakeLists.txt  test_Camera.cpp  test_ChessboardPlane.cpp  test_Color.cpp  test_Cone.cpp  test_Cylinder.cpp  test_Exceptions.cpp  test_Light.cpp  test_LightFactory.cpp  test_Plane.cpp  test_PrimitiveFactory.cpp  test_Resolution.cpp  test_SceneParser.cpp  test_Sphere.cpp  test_Torus.cpp  test_Transform.cpp  test_Triangle.cpp  test_Vector3D.cpp  test_ray.cpp
tests/configs/: test_lights.cfg  test_primitives.cfg  test_spheres.cfg
